src/objects/Related_Document__c.object
<CustomObject>
    <description>This is a junction object between legal documents and Opportunity. It is meant to hold information regarding necessary documents between the 2 to allow users to identify what is needed to execute the quote.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Legal_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to fill in the Governing Documents Related List</description>
        <inlineHelpText>This is the Opportunity you are creating the checklist for.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Governing Documents</relationshipLabel>
        <relationshipName>Related_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Governing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <description>Displays primary quote of related opportunity or displays legal document</description>
        <formula>IF(ISBLANK( Legal_Documents__c ),
  IF(ISBLANK(  Governing_Document__c ),
  If(ISBLANK( Related_Opportunity__c) ,
  &quot;Missing&quot;,
     If(ISBLANK(Related_Opportunity__r.SBQQ__PrimaryQuote__c),
        &quot;No Primary Quote&quot;,
        HYPERLINK(&quot;/&quot;&amp;  Related_Opportunity__r.SBQQ__PrimaryQuote__c ,
        Related_Opportunity__r.SBQQ__PrimaryQuote__r.Name ))
  ),
IF( Governing_Document__r.RecordType.DeveloperName=&apos;Legacy&apos;,HYPERLINK( Governing_Document__r.LDContractLink__c , Governing_Document__r.Name ),
HYPERLINK(&quot;/&quot;&amp;Governing_Document__c, Governing_Document__r.Name ))),
HYPERLINK(&quot;/&quot;&amp; Legal_Documents__c, Legal_Documents__r.Name ))</formula>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exec_Quarter__c</fullName>
        <formula>Governing_Document__r.Quarter_Executed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exec. Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File__c</fullName>
        <formula>IF(ISBLANK( Legal_Documents__c ),
IF(ISBLANK( Governing_Document__c ),
If(ISBLANK( Related_Opportunity__c) ,
&quot;Missing&quot;,
If(ISBLANK(Related_Opportunity__r.SBQQ__PrimaryQuote__c),
&quot;No Primary Quote&quot;,
HYPERLINK(&quot;https://mstr.lightning.force.com/&quot;&amp; Related_Opportunity__r.SBQQ__PrimaryQuote__c ,
Related_Opportunity__r.SBQQ__PrimaryQuote__r.Name ))
),
IF( Governing_Document__r.RecordType.DeveloperName=&apos;Legacy&apos;,HYPERLINK(  Governing_Document__r.LDDocumentLink__c  ,  Governing_Document__r.LDDocumentName__c  ),
HYPERLINK(&quot;https://mstr.lightning.force.com/&quot;&amp;Governing_Document__c, Governing_Document__r.Name ))),
HYPERLINK(&quot;https://mstr.lightning.force.com/&quot;&amp; Legal_Documents__c, Legal_Documents__r.Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governing_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Governing Document</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Legal_Documents__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Legal_Documents__c.Status__c</field>
                <operation>equals</operation>
                <value>LD09 EXE</value>
            </filterItems>
            <filterItems>
                <field>Legal_Documents__c.Status__c</field>
                <operation>equals</operation>
                <value>Agreement Executed</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Legal_Documents__c</referenceTo>
        <relationshipLabel>Related Documents (Governing Document)</relationshipLabel>
        <relationshipName>Related_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Documents__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up for legal documents</description>
        <label>Legal Documents</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Legal_Documents__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Legal_Documents__c</referenceTo>
        <relationshipLabel>Related Documents</relationshipLabel>
        <relationshipName>Legal_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to fill in the Related Documents related list</description>
        <inlineHelpText>This is the Opportunity who you are creating the legal document checklist for.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Documents</relationshipLabel>
        <relationshipName>Legal_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the opportunity that contains the primary quote which has documents related to the current quote.</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>NotNeeded</relationshipLabel>
        <relationshipName>Legal_Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Displays Status</description>
        <formula>IF(ISBLANK( Legal_Documents__c ),
 IF(ISBLANK( Governing_Document__c  ),
  If(ISBLANK( Related_Opportunity__c) ,
    &quot;No LD or Primary Quote&quot;,
     Related_Opportunity__r.SBQQ__PrimaryQuote__r.Quote_Description__c ),
   TEXT(Governing_Document__r.Status__c)),
  TEXT(Legal_Documents__r.Status__c)
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price Quotation/Sales Order (MSTR format)</fullName>
                </value>
                <value>
                    <fullName>Order Form (Customer format)</fullName>
                </value>
                <value>
                    <fullName>End User License Agreement (for partner deals only)</fullName>
                </value>
                <value>
                    <fullName>Customer-generated Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Statement of Work</fullName>
                </value>
                <value>
                    <fullName>Master Software License and Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Master Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Addendum/Amendment to SLA or MSA</fullName>
                </value>
                <value>
                    <fullName>Data Processing Addendum</fullName>
                </value>
                <value>
                    <fullName>Related License/Services Transaction</fullName>
                </value>
                <value>
                    <fullName>Information Security Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>OEM Agreement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Document</label>
    <nameField>
        <displayFormat>QRD-{0000}</displayFormat>
        <label>Legal Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Documents</pluralLabel>
    <recordTypes>
        <fullName>Governing</fullName>
        <active>true</active>
        <description>For Governing Document Links</description>
        <label>Governing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Related</fullName>
        <active>true</active>
        <description>For Related Documents</description>
        <label>Related</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Opportunity_or_Legal_Document</fullName>
        <active>true</active>
        <description>User must select either a Legal Document or Related Opportunity.</description>
        <errorConditionFormula>AND(
  ISBLANK( Related_Opportunity__c ),
  ISBLANK(  Legal_Documents__c ),
  ISBLANK(  Governing_Document__c )
)</errorConditionFormula>
        <errorMessage>You must relate either a Legal Document or Related Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_Opportunity_or_Legal_Document</fullName>
        <active>true</active>
        <description>User should only be able to select one</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Related_Opportunity__c)),
OR(
  NOT(ISBLANK(Legal_Documents__c)),
  NOT(ISBLANK( Governing_Document__c ))
)
)</errorConditionFormula>
        <errorMessage>You cannot select both a related opportunity and related legal document. Please select only one.</errorMessage>
    </validationRules>
</CustomObject>